3rd commits added modified  home.html

--- a/ideep_2_App/templates/home.html
+++ b/ideep_2_App/templates/home.html
@@ -64,7 +64,7 @@
         {% for result in values3 %}
             <tr align="center" style="color: turquoise;">
                 <td>{{result.payment_id}}</td>
-                <td>{{result.Order_id}}</td>
+                <td>{{result.order_id}}</td>
                 <td>{{result.status}}</td>
                 
                 
