question 2 subquestion-a working

--- a/ideep_2_App/templates/Failed.html
+++ b/ideep_2_App/templates/Failed.html
@@ -15,9 +15,9 @@
 
     {% for result in values %}
         <tr align="center" style="color: turquoise;">
-            <td>{{result.payment_id}}</td>
-            <td>{{result.Order_id}}</td>
-            <td>{{result.status}}</td>
+            <td>{{result.customer_no}}</td>
+            <td>{{result.customer_name}}</td>
+            <td>{{result.failed_count}}</td>
             
             
         </tr>
