3rd part also working fine in 2nd question

--- a/ideep_2_App/templates/order_count.html
+++ b/ideep_2_App/templates/order_count.html
@@ -23,7 +23,7 @@
             <td>{{result.customer_name}}</td>
             <td>{{result.order_id}}</td>    
             <td>{{result.order_date}}</td>  
-            <td>{{result.count}}</td>    
+            <td>{{result.order_count}}</td>    
         </tr>
     {%endfor%} 
 
