--- a/ideep_2_App/templates/base.html
+++ b/ideep_2_App/templates/base.html
@@ -12,6 +12,12 @@
     <h2 align=left class='activity-title'>Activity-1</h2>
     <header align='left' class='header_btns'>
         <div class='header_div'></div>
+            <form action='{%url "home" %}'>
+                <button class='btn'>Home</button>
+            </form>
+            <form action='{%url "add" %}'>
+                <button class='btn'>Add New</button>
+            </form>
             <form action='{%url "failed" %}'>
                 <button class='btn'>Failed</button>
             </form>
