--- a/ideep_2_App/templates/add_order.html
+++ b/ideep_2_App/templates/add_order.html
@@ -4,8 +4,11 @@
 
 <br><br<br><br<br><br>
 <div class='addform_table'>
+    <h3>{{message}}</h3>
+
 <h2>Order Form</h2>
     <form action="" method="POST">
+        {% csrf_token %}
         <table>
         {{form.as_table}}
         </table>
