--- a/ideep_2_App/templates/add_customer.html
+++ b/ideep_2_App/templates/add_customer.html
@@ -6,9 +6,11 @@
 <br><br<br><br<br><br>
 
 <div class='addform_table'>
+    <h3>{{message}}</h3>
     <h2>Customer Form</h2>
 
     <form action="" method="POST">
+        {% csrf_token %}
         <table>
         {{form.as_table}}
         </table>
@@ -19,10 +21,6 @@
     </form>
     <br><br><br>
 </div>
-
-
-
-
 
 
 
