added some changes in models and added signup table

--- a/ideep_2_App/templates/login.html
+++ b/ideep_2_App/templates/login.html
@@ -8,16 +8,16 @@
 <br>
 
 <center>
-
+    <h3>{{message}}</h3>
     <h1>Login</h1>
+<form action="login" method="POST">
+    {% csrf_token %}
 <table>
 {{loginform.as_table}}
 </table>
 <br>
 <input type="submit" placeholder="login">
-
+</form>
 </center>
-
-
 
 {% endblock %}
