added base for login and sign up

--- a/ideep_2_App/templates/base.html
+++ b/ideep_2_App/templates/base.html
@@ -39,14 +39,6 @@
             </select>
 
 
-
-
-
-
-
-
-
-
             <form action='{%url "failed" %}'>
                 <button class='btn'>Failed</button>
             </form>
@@ -56,6 +48,10 @@
             <form action='{%url "order_count" %}'>
                 <button class='btn'>Order Count</button>
             </form>
+            <form action='{%url "login" %}'>
+                <button class='btn'>Logout</button>
+            </form>
+
         </div>
     </header>
 
